# web-stuff

./: README.md  pyproject.toml
fastapi_jwt/: .env_example  .gitignore  README.md  TODO.md  main.py  pyproject.toml
fastapi_jwt/backend/: environment.py  login.py
fastapi_jwt/frontend/: index.html  main.js
frontend/: index.html  main.js
network_graph/: index.html  main.js
sse_dashboard/: README.md  main.py
sse_dashboard/frontend/: style.css
